fix container error and add bash script for the whole workflow
